- format objects w/ property names for RMC & GSV types - get sentences as a packet instead of one-by-one - buffer incoming data every 30 sec. (w/option to change interval) - make UI setting for changing interval - show the interval value on connect - stop BT serial activity when connecting to couch - convert the NMEA timestamp to human-readable

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -4,18 +4,29 @@
 }
 
 .select {
-    margin: 2em 0;
+	width: 90% !important;
+    margin: 2em auto;
     
 }
 #message {
 	margin: 0 1em;
 	border: 1px solid #ccc;
 	padding: 1em;
-
+	min-height: 15em;
 }
-#couchConfig{
+#couchConfig, #storageConfig{
 	margin: 1em;
 	border: 1px solid #333;
 	background-color: #eee;
 	padding: 1em;
+}
+#secondsInput{
+	width:6em;
+}
+#status{
+	margin: 0 1em;
+	background-color: #eff1f2;
+	/*color: #468847;
+	background-color: #dff0d8;*/
+	border: 1px solid #ddd;
 }
